test/files/neg/t7285.check
t7285.scala:17: warning: match may not be exhaustive.
It would fail on the following input: (Up, Down)
      (d1, d2) match {
      ^
t7285.scala:35: warning: match may not be exhaustive.
It would fail on the following input: Down
      (d1) match {
       ^
t7285.scala:53: warning: match may not be exhaustive.
It would fail on the following input: (Up, Down)
    (d1, d2) match {
    ^
error: No warnings can be incurred under -Werror.
three warnings found
one error found
